--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
   </head>
   <body>
     <main class="container">
+
+      <div class="container-text">
+        <h1>Learn to code by watching others</h1>
+        <p>
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </div>
+
       <div class="container-text">
         <h1>Learn to code by watching others</h1>
         <p>
